Bevel Amount Type: Percent - number too big to comfortably enter it by mouse movement #61773

Closed
opened 2019-02-21 02:19:24 +01:00 by Adam Pasek · 11 comments

System Information
Operating system: Windows 10 Pro
Graphics card: MSI GTX1080 Ti

Blender Version
Recorded on blender-2.80-7f40d553f903 but every version before and after has it

Short description of error
https://www.youtube.com/watch?v=ejHaQIpryns
When the Percent amount type is selected in the bevel tool/modifier it changes value range from 0-1 to 0-100 making it pretty uncomfortable to enter without typing the exact number.
Exact steps for others to reproduce the error
Use bevel tool or modifier and change the amount type to percent.

**System Information** Operating system: Windows 10 Pro Graphics card: MSI GTX1080 Ti **Blender Version** Recorded on blender-2.80-7f40d553f903 but every version before and after has it **Short description of error** https://www.youtube.com/watch?v=ejHaQIpryns When the Percent amount type is selected in the bevel tool/modifier it changes value range from 0-1 to 0-100 making it pretty uncomfortable to enter without typing the exact number. **Exact steps for others to reproduce the error** Use bevel tool or modifier and change the amount type to percent.
Author

Added subscriber: @Llamarider

Added subscriber: @Llamarider

#62039 was marked as duplicate of this issue

#62039 was marked as duplicate of this issue
Adam Pasek changed title from Bevel Amount Type: Percent - too big number to comfortably enter it by mouse movement to Bevel Amount Type: Percent - number too big to comfortably enter it by mouse movement 2019-02-21 02:19:42 +01:00

Added subscriber: @ThinkingPolygons

Added subscriber: @ThinkingPolygons

Yeah, that can be annoying.

Yeah, that can be annoying.

Added subscribers: @howardt, @WilliamReynish

Added subscribers: @howardt, @WilliamReynish

This is also a problem for the units - we can’t make this value either a % or distance (m) because the same value is used for both distance and percentage.

Splitting up this property would solve both issues.

@howardt

This is also a problem for the units - we can’t make this value either a % or distance (m) because the same value is used for both distance and percentage. Splitting up this property would solve both issues. @howardt
Howard Trickey self-assigned this 2019-02-21 13:09:22 +01:00
Member

I will fix this by splitting, which will also make it possible to do units right (have already done this splitting in the modifier).

I will fix this by splitting, which will also make it possible to do units right (have already done this splitting in the modifier).

Added subscribers: @Rawalanche, @ideasman42

Added subscribers: @Rawalanche, @ideasman42

This issue was referenced by 208fafb285

This issue was referenced by 208fafb285367d51328a2c5396fc86ee7746832f
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

I am not sure whether I did anything in particular to fix the mouse sensitivity to percent, but it seems fine to me. Maybe this also had to do with the scale issue that my commit did fix. If the original reporter of this bug thinks it is still not ok for percent, please give more details (a .blend, and details about what you did -- I'm assuming adjusting by mouse movement, but maybe that was a wrong assumption).

I am not sure whether I did anything in particular to fix the mouse sensitivity to percent, but it seems fine to me. Maybe this also had to do with the scale issue that my commit did fix. If the original reporter of this bug thinks it is still not ok for percent, please give more details (a .blend, and details about what you did -- I'm assuming adjusting by mouse movement, but maybe that was a wrong assumption).
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61773
No description provided.